@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module Africa #:nodoc:
+include DirectoryLoader
+directory 'definitions/Africa'
+end
+end
+end
