@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module America #:nodoc:
+include DirectoryLoader
+directory 'definitions/America'
+end
+end
+end
