@@ -1,0 +1,11 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module America #:nodoc:
+module Argentina #:nodoc:
+include DirectoryLoader
+directory 'definitions/America/Argentina'
+end
+end
+end
+end
