@@ -1,0 +1,11 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module America #:nodoc:
+module Indiana #:nodoc:
+include DirectoryLoader
+directory 'definitions/America/Indiana'
+end
+end
+end
+end
