@@ -1,0 +1,11 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module America #:nodoc:
+module Kentucky #:nodoc:
+include DirectoryLoader
+directory 'definitions/America/Kentucky'
+end
+end
+end
+end
