@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module Antarctica #:nodoc:
+include DirectoryLoader
+directory 'definitions/Antarctica'
+end
+end
+end
