@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module Arctic #:nodoc:
+include DirectoryLoader
+directory 'definitions/Arctic'
+end
+end
+end
