@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module Atlantic #:nodoc:
+include DirectoryLoader
+directory 'definitions/Atlantic'
+end
+end
+end
