@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module Australia #:nodoc:
+include DirectoryLoader
+directory 'definitions/Australia'
+end
+end
+end
