@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module Chile #:nodoc:
+include DirectoryLoader
+directory 'definitions/Chile'
+end
+end
+end
