@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module Etc #:nodoc:
+include DirectoryLoader
+directory 'definitions/Etc'
+end
+end
+end
