@@ -1,0 +1,9 @@
+require 'tzinfo/directory_loader'
+module TZInfo
+module Definitions #:nodoc:
+module Europe #:nodoc:
+include DirectoryLoader
+directory 'definitions/Europe'
+end
+end
+end
